# pilot

./: .gitignore  .gitmodules  AGENTS.md  LICENSE  Makefile  PYTHON_PORT.md  README.md  pyproject.toml
.pi/extensions/: exit-alias.ts  harness.ts
.pi/extensions/plan-mode/: index.ts  utils.test.ts  utils.ts
.pi/skills/pi-upgrade/: SKILL.md
.pi/skills/ts-python-port/: SKILL.md
examples/sdk/: 01_minimal.py  02_custom_model.py  03_read_only.py  04_in_memory.py
examples/toy-extension/: README.md  pyproject.toml
examples/toy-extension/src/pilot_toy_ext/: __init__.py  handlers.py  tools.py
references/: port-deltas.md
src/pilot/: __init__.py  __main__.py  config.py  sdk.py
src/pilot/agent_loop/: __init__.py
src/pilot/auth/: __init__.py  storage.py  types.py
src/pilot/compaction/: __init__.py  utils.py
src/pilot/extensions/: __init__.py  agent_integration.py  event_bus.py  loader.py  runner.py  session_integration.py  types.py  wrapper.py
src/pilot/models/: __init__.py  (+1 more)
src/pilot_core/: __init__.py  agent_loop.py  types.py
src/pilot_provider/: __init__.py  openrouter.py  types.py
tests/: conftest.py  test_agent_loop.py  test_auth.py  test_bash_incremental.py  test_compaction.py  test_extensions.py  test_model_registry.py  test_openrouter.py  test_output_accumulator.py  test_prompts.py  test_sdk.py  test_sdk_examples.py  test_session.py  test_settings.py  test_tools.py  test_toy_extension.py
tests/tui/: conftest.py  test_autocomplete.py  test_component.py  test_integration.py  test_keys.py  test_overlays.py  test_textual_integration.py  test_utils.py
(+58 files in other folders)
