[project]
name = "pilot"
version = "0.1.0"
description = "Personal and opinionated coding agent harness"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.5",
    "openai>=1.30",
    "httpx>=0.27",
    "jsonschema>=4.20",
]

[project.scripts]
pilot = "pilot.__main__:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
